--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit
-pandas==1.5.3
-plotly==5.3.0
-numpy>=1.26.0
+streamlit>=1.25
+pandas>=2.2.2
+numpy>=1.26.4
+plotly>=5.20.0
 supabase
 python-dotenv==1.1.0
