--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit>=1.25
+streamlit>=1.31.1
 pandas>=2.2.2
+plotly>=5.22.0
+supabase>=1.0.3
+python-dateutil>=2.9.0
 numpy>=1.26.4
-plotly>=5.20.0
-supabase
-python-dotenv==1.1.0
